Added GitHub, LinkedIn, alignment, and blog post links

--- a/html/index.html
+++ b/html/index.html
@@ -155,5 +155,26 @@
 <p><em>Hello!</em></p>
 <p>This is my personal website.</p>
 <p>It is still under construction.</p>
+<p><a href="https://github.com/RedXanadu">GitHub</a></p>
+<p><a href="https://www.linkedin.com/in/andrew-howe-20a423142/">LinkedIn</a></p>
+<p><a href="https://en.wikipedia.org/wiki/Alignment_(Dungeons_%26_Dragons)#Chaotic_good">Alignment</a></p>
+<h1 id="things-ive-written">Things I've written</h1>
+<dl>
+<dt>21 May 2020</dt>
+<dd><p><a href="https://www.loadbalancer.org/blog/layer-4-vs-layer-7-load-balancing-we-still-love-dsr/">(Video) Layer 4 vs Layer 7 load balancing - we still love DSR, but…</a></p>
+</dd>
+<dt>23 December 2019</dt>
+<dd><p><a href="https://www.loadbalancer.org/blog/layer-4-vs-layer-7-load-balancing-we-still-love-dsr/">HAProxy Conference 2019</a></p>
+</dd>
+<dt>3 December 2019</dt>
+<dd><p><a href="https://www.loadbalancer.org/blog/security-through-geography-blocking-traffic-by-country-continent-or-ip-address-using-our-waf-functionality/">Security through geography: blocking traffic by country, continent, or IP address using ModSecurity</a></p>
+</dd>
+<dt>20 June 2019</dt>
+<dd><p><a href="https://www.loadbalancer.org/blog/sack-panic-what-is-it-and-should-we-actually-panic/">SACK Panic: What is it, and is it actually time to panic?</a></p>
+</dd>
+<dt>20 December 2018</dt>
+<dd><p><a href="https://www.loadbalancer.org/blog/15-years-later-we-still-love-dsr/">15 years later, we still love DSR</a></p>
+</dd>
+</dl>
 </body>
 </html>
