Added explicit CSS, updated build script, and tweaked content

--- a/html/index.html
+++ b/html/index.html
@@ -147,17 +147,60 @@
   <!--[if lt IE 9]>
     <script src="//cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv-printshiv.min.js"></script>
   <![endif]-->
+  <style>
+  	body {
+  		padding-top: 30px;
+  	}
+
+  	.title {
+  		margin-top: 0;
+  		font-size: 2em;
+  	}
+
+  	header {
+  		margin-bottom: 1em;
+  	}
+
+  	h1 {
+  		font-size: 1.4em;
+  		color: DarkSlateGray;
+  	}
+
+
+
+  	a {
+  		color: DarkSlateGray;
+  	}
+
+  	a:hover {
+  		background-color: WhiteSmoke;
+  	}
+
+
+
+  	dt {
+  		font-size: 0.9em;
+  		/*color: DarkSlateGray;*/
+  	}
+
+  	dd {
+  		margin-left: 0;
+  	}
+
+  	dd p {
+  		margin-top: 0;
+  		margin-bottom: 1.3em;
+  	}
+  </style>
 </head>
 <body>
 <header id="title-block-header">
 <h1 class="title">Andrew Howe</h1>
 </header>
-<p><em>Hello!</em></p>
-<p>This is my personal website.</p>
-<p>It is still under construction.</p>
-<p><a href="https://github.com/RedXanadu">GitHub</a></p>
-<p><a href="https://www.linkedin.com/in/andrew-howe-20a423142/">LinkedIn</a></p>
-<p><a href="https://en.wikipedia.org/wiki/Alignment_(Dungeons_%26_Dragons)#Chaotic_good">Alignment</a></p>
+<p><em>Hello!</em> This is my personal website.</p>
+<p>As of January 2021, it's still under construction.</p>
+<p>Isn't clean and simple HTML lovely?</p>
+<p><a href="https://github.com/RedXanadu">GitHub</a> | <a href="https://www.linkedin.com/in/andrew-howe-20a423142/">LinkedIn</a> | <a href="https://en.wikipedia.org/wiki/Alignment_(Dungeons_%26_Dragons)#Chaotic_good">Alignment</a></p>
 <h1 id="things-ive-written">Things I've written</h1>
 <dl>
 <dt>21 May 2020</dt>
