--- a/html/index.html
+++ b/html/index.html
@@ -203,6 +203,9 @@
 <p><a href="https://github.com/RedXanadu">GitHub</a> | <a href="https://www.linkedin.com/in/andrew-howe-20a423142/">LinkedIn</a> | <a href="https://en.wikipedia.org/wiki/Alignment_(Dungeons_%26_Dragons)#Chaotic_good">Alignment</a></p>
 <h1 id="things-ive-written">Things I've written</h1>
 <dl>
+<dt>8 January 2021</dt>
+<dd><p><a href="https://www.loadbalancer.org/blog/modsecurity-and-the-case-of-the-never-decreasing-variables/">ModSecurity and the Case of the Never Decreasing Variables</a></p>
+</dd>
 <dt>21 May 2020</dt>
 <dd><p><a href="https://www.loadbalancer.org/blog/layer-4-vs-layer-7-load-balancing-we-still-love-dsr/">(Video) Layer 4 vs Layer 7 load balancing - we still love DSR, but…</a></p>
 </dd>
