Updated text and added a new link

--- a/html/index.html
+++ b/html/index.html
@@ -198,11 +198,14 @@
 <h1 class="title">Andrew Howe</h1>
 </header>
 <p><em>Hello!</em> This is my personal website.</p>
-<p>As of January 2021, it's still under construction.</p>
+<p>As of March 2021, it's still under construction.</p>
 <p>Isn't clean and simple HTML lovely?</p>
 <p><a href="https://github.com/RedXanadu">GitHub</a> | <a href="https://www.linkedin.com/in/andrew-howe-20a423142/">LinkedIn</a> | <a href="https://en.wikipedia.org/wiki/Alignment_(Dungeons_%26_Dragons)#Chaotic_good">Alignment</a></p>
 <h1 id="things-ive-written">Things I've written</h1>
 <dl>
+<dt>26 February 2021</dt>
+<dd><p><a href="https://www.loadbalancer.org/blog/open-source-software-myth-busting-business-benefits/">(Video) Round table discussion about FLOSS ("Open source software: myth-busting, business benefits and FOSDEM '21")</a></p>
+</dd>
 <dt>8 January 2021</dt>
 <dd><p><a href="https://www.loadbalancer.org/blog/modsecurity-and-the-case-of-the-never-decreasing-variables/">ModSecurity and the Case of the Never Decreasing Variables</a></p>
 </dd>
