Add link to CVE blog post

--- a/html/index.html
+++ b/html/index.html
@@ -202,6 +202,9 @@
 <p><a href="https://github.com/RedXanadu">GitHub</a> | <a href="https://www.linkedin.com/in/andrew-howe-20a423142/">LinkedIn</a> | <a href="https://en.wikipedia.org/wiki/Alignment_(Dungeons_%26_Dragons)#Chaotic_good">Alignment</a></p>
 <h1 id="things-ive-written">Things I've written</h1>
 <dl>
+<dt>30 June 2021</dt>
+<dd><p>I discovered my first CVE-worthy vulnerability! <br /> <a href="https://www.loadbalancer.org/blog/announcing-cve-2021-35368-owasp-modsecurity-core-rule-set-bypass/">Announcing CVE-2021-35368: OWASP ModSecurity Core Rule Set Bypass</a></p>
+</dd>
 <dt>26 February 2021</dt>
 <dd><p><a href="https://www.loadbalancer.org/blog/open-source-software-myth-busting-business-benefits/">(Video) Round table discussion about FLOSS ("Open source software: myth-busting, business benefits and FOSDEM '21")</a></p>
 </dd>
