Add link to ModSecurity extensions video

--- a/html/index.html
+++ b/html/index.html
@@ -202,6 +202,9 @@
 <p><a href="https://github.com/RedXanadu">GitHub</a> | <a href="https://www.linkedin.com/in/andrew-howe-20a423142/">LinkedIn</a> | <a href="https://en.wikipedia.org/wiki/Alignment_(Dungeons_%26_Dragons)#Chaotic_good">Alignment</a></p>
 <h1 id="things-ive-written">Things I've written</h1>
 <dl>
+<dt>13 August 2021</dt>
+<dd><p><a href="https://www.loadbalancer.org/blog/extending-modsecurity-how-to-add-completely-custom-functionality/">(With video) Extending ModSecurity: How to add completely custom WAF functionality</a></p>
+</dd>
 <dt>30 June 2021</dt>
 <dd><p>I discovered my first CVE-worthy vulnerability! <br /> <a href="https://www.loadbalancer.org/blog/announcing-cve-2021-35368-owasp-modsecurity-core-rule-set-bypass/">Announcing CVE-2021-35368: OWASP ModSecurity Core Rule Set Bypass</a></p>
 </dd>
@@ -212,7 +215,7 @@
 <dd><p><a href="https://www.loadbalancer.org/blog/modsecurity-and-the-case-of-the-never-decreasing-variables/">ModSecurity and the Case of the Never Decreasing Variables</a></p>
 </dd>
 <dt>21 May 2020</dt>
-<dd><p><a href="https://www.loadbalancer.org/blog/layer-4-vs-layer-7-load-balancing-we-still-love-dsr/">(Video) Layer 4 vs Layer 7 load balancing - we still love DSR, but…</a></p>
+<dd><p><a href="https://www.loadbalancer.org/blog/layer-4-vs-layer-7-load-balancing-we-still-love-dsr/">(With video) Layer 4 vs Layer 7 load balancing - we still love DSR, but…</a></p>
 </dd>
 <dt>23 December 2019</dt>
 <dd><p><a href="https://www.loadbalancer.org/blog/haproxy-conference-2019/">HAProxy Conference 2019</a></p>
