--- a/html/index.html
+++ b/html/index.html
@@ -207,7 +207,7 @@
 </ul>
 <p>among other things.</p>
 <p>Isn't clean and simple HTML lovely?</p>
-<p><a href="https://github.com/RedXanadu">GitHub</a> | <a href="https://www.linkedin.com/in/andrew-howe-20a423142/">LinkedIn</a> | <a href="https://en.wikipedia.org/wiki/Alignment_(Dungeons_%26_Dragons)#Chaotic_good">Alignment</a></p>
+<p><a href="https://github.com/RedXanadu">GitHub</a> | <a href="https://www.linkedin.com/in/andrew-howe-20a423142/">LinkedIn</a> | <a href="https://stackoverflow.com/users/16322997/xanadu">Stack Overflow</a> | <a href="https://en.wikipedia.org/wiki/Alignment_(Dungeons_%26_Dragons)#Chaotic_good">Alignment</a></p>
 <h1 id="things-ive-written">Things I've written</h1>
 <dl>
 <dt>6 January 2022</dt>
