Add link to CRS 3 blog post

--- a/html/index.html
+++ b/html/index.html
@@ -210,6 +210,9 @@
 <p><a href="https://github.com/RedXanadu">GitHub</a> | <a href="https://www.linkedin.com/in/andrew-howe-20a423142/">LinkedIn</a> | <a href="https://stackoverflow.com/users/16322997/xanadu">Stack Overflow</a> | <a href="https://en.wikipedia.org/wiki/Alignment_(Dungeons_%26_Dragons)#Chaotic_good">Alignment</a></p>
 <h1 id="things-ive-written">Things I've written</h1>
 <dl>
+<dt>17 January 2022</dt>
+<dd><p><a href="https://www.loadbalancer.org/blog/simplifying-web-application-security-with-the-core-rule-set-v3/">Simplifying web application security with the Core Rule Set v3</a></p>
+</dd>
 <dt>6 January 2022</dt>
 <dd><p><a href="https://www.loadbalancer.org/blog/outreach-and-its-importance/">The importance of outreach: Introducing students to load balancing</a></p>
 </dd>
