Add email address

--- a/html/index.html
+++ b/html/index.html
@@ -206,7 +206,7 @@
 <li>Linux load balancer engineer/architect</li>
 </ul>
 <p>among other things.</p>
-<p>Isn't clean and simple HTML lovely?</p>
+<p>Talk to me about ModSecurity WAFs! andrew [at] ahowe.org</p>
 <p><a href="https://github.com/RedXanadu">GitHub</a> | <a href="https://www.linkedin.com/in/andrew-howe-20a423142/">LinkedIn</a> | <a href="https://stackoverflow.com/users/16322997/xanadu">Stack Overflow</a> | <a href="https://en.wikipedia.org/wiki/Alignment_(Dungeons_%26_Dragons)#Chaotic_good">Alignment</a></p>
 <h1 id="things-ive-written">Things I've written</h1>
 <dl>
