Add link to coreruleset.org CVEs blog post

--- a/html/index.html
+++ b/html/index.html
@@ -148,10 +148,15 @@
     }
     code{white-space: pre-wrap;}
     span.smallcaps{font-variant: small-caps;}
-    span.underline{text-decoration: underline;}
-    div.column{display: inline-block; vertical-align: top; width: 50%;}
+    div.columns{display: flex; gap: min(4vw, 1.5em);}
+    div.column{flex: 1;}
     div.hanging-indent{margin-left: 1.5em; text-indent: -1.5em;}
     ul.task-list{list-style: none;}
+    ul.task-list li input[type="checkbox"] {
+      width: 0.8em;
+      margin: 0 0.8em 0.2em -1.6em;
+      vertical-align: middle;
+    }
     .display.math{display: block; text-align: center; margin: 0.5rem auto;}
   </style>
   <style>
@@ -224,6 +229,13 @@ Overflow</a> | <a
 href="https://en.wikipedia.org/wiki/Alignment_(Dungeons_%26_Dragons)#Chaotic_good">Alignment</a></p>
 <h1 id="things-ive-written">Things I've written</h1>
 <dl>
+<dt>19 September 2022</dt>
+<dd>
+<p>Co-wrote CVE advisories and blog post over at <a
+href="https://coreruleset.org/">coreruleset.org</a> <br /> <a
+href="https://coreruleset.org/20220919/crs-version-3-3-3-and-3-2-2-covering-several-cves/">CRS
+Version 3.3.3 and 3.2.2 (covering several CVEs)</a></p>
+</dd>
 <dt>9 June 2022</dt>
 <dd>
 <p><a
