Add cool 90s electronic mail symbol

--- a/html/index.html
+++ b/html/index.html
@@ -227,7 +227,7 @@ Set</a> developer</li>
 <li>Linux load balancer engineer/architect</li>
 </ul>
 <p>among other things.</p>
-<p>Talk to me about ModSecurity WAFs! andrew [at] ahowe.org</p>
+<p>Talk to me about ModSecurity WAFs! 🖄 andrew [at] ahowe.org</p>
 <p><a href="https://github.com/RedXanadu">GitHub</a> | <a
 href="https://www.linkedin.com/in/andrew-howe-20a423142/">LinkedIn</a> |
 <a href="https://stackoverflow.com/users/16322997/xanadu">Stack
