--- a/html/index.html
+++ b/html/index.html
@@ -242,6 +242,12 @@ href="https://www.loadbalancer.org/blog/owasp-crs-summit-and-owasp-global-appsec
 back from the OWASP Core Rule Set Community Summit and OWASP Global
 AppSec Dublin 2023</a></p>
 </dd>
+<dt>14 February 2023</dt>
+<dd>
+<p><a href="https://www.youtube.com/watch?v=c-cieiipYv8">(Video) Talk
+delivered at the CRS Community Summit: A CRS Integrator's Perspective:
+Changing Real World Customer Needs</a></p>
+</dd>
 <dt>19 September 2022</dt>
 <dd>
 <p>Co-wrote CVE advisories and blog post over at <a
