Add link to time-based content switching blog post

--- a/html/index.html
+++ b/html/index.html
@@ -235,6 +235,13 @@ Overflow</a> | <a
 href="https://en.wikipedia.org/wiki/Alignment_(Dungeons_%26_Dragons)#Chaotic_good">Alignment</a></p>
 <h1 id="things-ive-written">Things I've written</h1>
 <dl>
+<dt>26 May 2023</dt>
+<dd>
+<p><a
+href="https://www.loadbalancer.org/blog/three-scenarios-for-implementing-time-based-security-and-content-switching/">Three
+scenarios for implementing time-based security and content switching on
+your load balancer</a></p>
+</dd>
 <dt>24 February 2023</dt>
 <dd>
 <p><a
