Add link to ModSecurity EOL perspectives blog post

--- a/html/index.html
+++ b/html/index.html
@@ -235,6 +235,13 @@ Overflow</a> | <a
 href="https://en.wikipedia.org/wiki/Alignment_(Dungeons_%26_Dragons)#Chaotic_good">Alignment</a></p>
 <h1 id="things-ive-written">Things I've written</h1>
 <dl>
+<dt>13 June 2023</dt>
+<dd>
+<p><a
+href="https://www.loadbalancer.org/blog/why-you-shouldnt-lose-sleep-over-the-commercial-end-of-life-of-modsecurity/">Why
+you shouldn't lose sleep over the commercial end-of-life of
+ModSecurity</a></p>
+</dd>
 <dt>26 May 2023</dt>
 <dd>
 <p><a
