Add link to coreruleset.org CVE blog post

--- a/html/index.html
+++ b/html/index.html
@@ -235,6 +235,13 @@ Overflow</a> | <a
 href="https://en.wikipedia.org/wiki/Alignment_(Dungeons_%26_Dragons)#Chaotic_good">Alignment</a></p>
 <h1 id="things-ive-written">Things I've written</h1>
 <dl>
+<dt>17 July 2023</dt>
+<dd>
+<p>CVE blog post at <a
+href="https://coreruleset.org/">coreruleset.org</a> <br /> <a
+href="https://coreruleset.org/20230717/cve-2023-38199-multiple-content-type-headers/">CVE-2023-38199
+– Multiple Content-Type Headers</a></p>
+</dd>
 <dt>13 June 2023</dt>
 <dd>
 <p><a
