Add commas for clarity

--- a/html/index.html
+++ b/html/index.html
@@ -238,7 +238,7 @@ href="https://en.wikipedia.org/wiki/Alignment_(Dungeons_%26_Dragons)#Chaotic_goo
 <dt>17 July 2023</dt>
 <dd>
 <p>CVE blog post at <a
-href="https://coreruleset.org/">coreruleset.org</a> <br /> <a
+href="https://coreruleset.org/">coreruleset.org</a>: <br /> <a
 href="https://coreruleset.org/20230717/cve-2023-38199-multiple-content-type-headers/">CVE-2023-38199
 – Multiple Content-Type Headers</a></p>
 </dd>
@@ -272,7 +272,7 @@ Changing Real World Customer Needs</a></p>
 <dt>19 September 2022</dt>
 <dd>
 <p>Co-wrote CVE advisories and blog post over at <a
-href="https://coreruleset.org/">coreruleset.org</a> <br /> <a
+href="https://coreruleset.org/">coreruleset.org</a>: <br /> <a
 href="https://coreruleset.org/20220919/crs-version-3-3-3-and-3-2-2-covering-several-cves/">CRS
 Version 3.3.3 and 3.2.2 (covering several CVEs)</a></p>
 </dd>
