--- a/html/index.html
+++ b/html/index.html
@@ -235,6 +235,13 @@ Overflow</a> | <a
 href="https://en.wikipedia.org/wiki/Alignment_(Dungeons_%26_Dragons)#Chaotic_good">Alignment</a></p>
 <h1 id="things-ive-written">Things I've written</h1>
 <dl>
+<dt>24 July 2023</dt>
+<dd>
+<p>Release announcement at <a
+href="https://coreruleset.org/">coreruleset.org</a>: <br /> <a
+href="https://coreruleset.org/20230724/crs-version-3-3-5-released/">CRS
+version 3.3.5 released</a></p>
+</dd>
 <dt>17 July 2023</dt>
 <dd>
 <p>CVE blog post at <a
