Add link to coreruleset.org interview

--- a/html/index.html
+++ b/html/index.html
@@ -235,6 +235,20 @@ Overflow</a> | <a
 href="https://en.wikipedia.org/wiki/Alignment_(Dungeons_%26_Dragons)#Chaotic_good">Alignment</a></p>
 <h1 id="things-ive-written">Things I've written</h1>
 <dl>
+<dt>9 November 2023</dt>
+<dd>
+<p>Interview: <a
+href="https://coreruleset.org/20231109/meet-the-crs-team-andrew-the-technical-writer-who-loves-eurovision-and-doom-ii/">Meet
+the CRS team: Andrew, the technical writer who loves Eurovision and Doom
+II</a></p>
+</dd>
+<dt>26 October 2023</dt>
+<dd>
+<p>Release announcement at <a
+href="https://coreruleset.org/">coreruleset.org</a>: <br /> <a
+href="https://coreruleset.org/20231026/crs-version-4-0-0-release-candidate-2-available/">CRS
+version 4.0.0 release candidate 2 available</a></p>
+</dd>
 <dt>24 July 2023</dt>
 <dd>
 <p>Release announcement at <a
