--- a/html/index.html
+++ b/html/index.html
@@ -232,10 +232,11 @@
 <li><a href="https://coreruleset.org/">OWASP ModSecurity Core Rule
 Set</a> developer</li>
 <li>Technical author</li>
-<li>Linux load balancer engineer/architect</li>
+<li>WAF engineer / Linux load balancer engineer</li>
 </ul>
 <p>among other things.</p>
-<p>Talk to me about ModSecurity WAFs! 🖄 andrew [at] ahowe.org</p>
+<p>Talk to me about WAF consultancy and ModSecurity WAFs! <br /> 🖄
+andrew [at] ahowe.org</p>
 <p><a href="https://github.com/RedXanadu">GitHub</a> | <a
 href="https://www.linkedin.com/in/andrew-howe-20a423142/">LinkedIn</a> |
 <a href="https://stackoverflow.com/users/16322997/xanadu">Stack
