Add new blog posts and rebuild HTML site

--- a/html/index.html
+++ b/html/index.html
@@ -218,9 +218,6 @@
   		margin-bottom: 1.4em;
   	}
   </style>
-  <!--[if lt IE 9]>
-    <script src="//cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv-printshiv.min.js"></script>
-  <![endif]-->
 </head>
 <body>
 <header id="title-block-header">
@@ -228,14 +225,14 @@
 </header>
 <p><em>Hello!</em> I'm Andrew, a:</p>
 <ul>
-<li>Free &amp; open-source software advocate</li>
+<li>WAF consultant / Linux load balancer engineer</li>
 <li><a href="https://coreruleset.org/">OWASP ModSecurity Core Rule
 Set</a> developer</li>
+<li>Free &amp; open-source software advocate</li>
 <li>Technical author</li>
-<li>WAF engineer / Linux load balancer engineer</li>
 </ul>
 <p>among other things.</p>
-<p>Talk to me about WAF consultancy and ModSecurity WAFs! <br /> 🖄
+<p>Talk to me about WAF consultancy, ModSecurity, and WAFs! <br /> 🖄
 andrew [at] ahowe.org</p>
 <p><a href="https://github.com/RedXanadu">GitHub</a> | <a
 href="https://www.linkedin.com/in/andrew-howe-20a423142/">LinkedIn</a> |
@@ -245,6 +242,18 @@ href="https://en.wikipedia.org/wiki/Alignment_(Dungeons_%26_Dragons)#Chaotic_goo
 | <a href="https://ahowe.org/andrew_howe.pub.key">🔑 PGP key</a></p>
 <h1 id="things-ive-written">Things I've written</h1>
 <dl>
+<dt>30 December 2024</dt>
+<dd>
+<p><a
+href="https://kemptechnologies.com/blog/retired-legacy-waf-option-removed-in-lmos-version-7.2.61.0/">Retired
+"Legacy WAF" Option Being Removed in LMOS Version 7.2.61.0</a></p>
+</dd>
+<dt>21 November 2024</dt>
+<dd>
+<p><a
+href="https://kemptechnologies.com/blog/why-you-need-a-web-application-firewall/">Why
+You Need a Web Application Firewall (WAF)</a></p>
+</dd>
 <dt>9 November 2023</dt>
 <dd>
 <p>Interview: <a
