Add link to PCI DSS 4.0.1 blog post

--- a/html/index.html
+++ b/html/index.html
@@ -242,6 +242,12 @@ href="https://en.wikipedia.org/wiki/Alignment_(Dungeons_%26_Dragons)#Chaotic_goo
 | <a href="https://ahowe.org/andrew_howe.pub.key">🔑 PGP key</a></p>
 <h1 id="things-ive-written">Things I've written</h1>
 <dl>
+<dt>9 April 2025</dt>
+<dd>
+<p><a
+href="https://kemptechnologies.com/blog/pci-dss-business-compliance-best-practices/">Is
+Your Business Ready for the New PCI DSS?</a></p>
+</dd>
 <dt>30 December 2024</dt>
 <dd>
 <p><a
